methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:53: error: not found: value color
  growFlower(color.RED);
             ^FlowerCase:55: error: not found: value color
  growFlower(color.CYAN);
             ^FlowerCase:57: error: not found: value color
  growFlower(color.RED);
             ^FlowerCase:59: error: not found: value color
  growFlower(color.CYAN);
             ^FlowerCase:66: error: not found: value color
  growFlower(color.ORANGE);
             ^FlowerCase:68: error: not found: value color
  growFlower(color.BLUE);
             ^FlowerCase:70: error: not found: value color
  growFlower(color.ORANGE);
             ^FlowerCase:77: error: not found: value color
  growFlower(color.PINK);
             ^FlowerCase:79: error: not found: value color
  growFlower(color.GREEN);
             ^FlowerCase:81: error: not found: value color
  growFlower(color.PINK);
             ^FlowerCase:83: error: not found: value color
  growFlower(color.GREEN);
             ^